--- a/Lights.QuickMVC/Lights.QuickMVC.Web2/Areas/Admin/Views/Menu/Index.cshtml
+++ b/Lights.QuickMVC/Lights.QuickMVC.Web2/Areas/Admin/Views/Menu/Index.cshtml
@@ -12,22 +12,27 @@
     </h3>
 }
 @section searchBox{
-    <div class="row">
-        <div class="col-sm-3">
-            <div class="input-group">
-                <div class="input-group-btn">
-                    <select class="form-control" id="searchType" style="width:auto">
-                        <option value="0">搜索类型</option>
-                        <option value="1">用户名</option>
-                    </select>
+    @*<div class="panel panel-default">
+        <div class="panel-heading">查询条件</div>
+        <div class="panel-body">
+            <div class="row">
+                <div class="col-sm-3">
+                    <div class="input-group">
+                        <div class="input-group-btn">
+                            <select class="form-control" id="searchType" style="width:auto">
+                                <option value="0">搜索类型</option>
+                                <option value="1">用户名</option>
+                            </select>
+                        </div>
+                        <input class="form-control" type="text" placeholder="搜索关键字" id="searchkey" />
+                    </div>
                 </div>
-                <input class="form-control" type="text" placeholder="搜索关键字" id="searchkey" />
+                <div class="col-sm-3"><button type="button" id="btn_query" class="btn btn-primary">查询</button></div>
+                <div class="col-sm-3"></div>
+                <div class="col-sm-3"></div>
             </div>
         </div>
-        <div class="col-sm-3"><button type="button" id="btn_query" class="btn btn-primary">查询</button></div>
-        <div class="col-sm-3"></div>
-        <div class="col-sm-3"></div>
-    </div>
+    </div>*@
 }
 @section toolbarBox{
     <button id="btn_add" type="button" class="btn btn-default">
@@ -40,10 +45,8 @@
         <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>删除
     </button>
 }
-<table class="table-striped table-hover table-condensed" id="table">
-
-</table>
+<table class="table-striped table-hover table-condensed" id="table"></table>
 @section Scripts{
-<script src="~/Scripts/AdminPage/MenuIndex.js"></script>
+    <script src="~/Scripts/AdminPage/MenuIndex.js"></script>
 }
 
